更新 DiFlow-TTS 引言

--- a/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
+++ b/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
@@ -52,45 +52,73 @@ Code and audio samples are available on our [demo page](https://diflow-tts.githu
 
 ## 1·引言
 
-<--
+<!--
 Zero-shot TTS has seen significant advancements in recent years, aiming to generate high-quality speech that accurately mimics the voice of previously unseen speakers using only a few seconds of reference, with applications in personalized virtual assistants, accessibility tools for low-resource languages, and content creation.
 Although large-scale generative models have made substantial progress in this area, several challenges remain.
 -->
+零样本 TTS 近年来取得了显著进展, 目标是仅使用数秒的参考语音来精确地模仿先前未见过的说话人声音并生成高质量语音, 应用于个性化虚拟助手, 低资源语言的可访问性工具, 和内容创作.
+虽然大规模生成模型在这个领域取得了重大进展, 但仍有一些挑战.
 
-<--
+<!--
 Recent studies have explored the application of language modeling (**VALL-E X**[^Zhang2023VALL-EX], **VALL-E R**[^Han2024VALL-ER], **MELLE**[^Meng2024MELLE], **ELLA-V**[^Song2024ELLA-V], **VALL-E 2**[^Chen2024VALL-E2], **VoiceCraft**[^Peng2024VoiceCraft], **MobileSpeech**[^Ji2024MobileSpeech], **Spark-TTS**[^Wang2025Spark-TTS], **VALL-E**[^Wang2023VALL-E]), particularly through autoregressive (AR) approaches.
 A pioneering work of this is **VALL-E**[^Wang2023VALL-E], which represents speech as discrete codec tokens and treats these tokens analogously to text, thus reformulating TTS as a conditional codec language modeling task.
 Although such models demonstrate strong performance in terms of speech naturalness and speaker similarity, they typically require training on large-scale datasets to be effective.
 Moreover, their autoregressive nature results in slow inference and introduces common artifacts, such as unintended repetition of content from the reference speech or missing initial words from the input text.
 -->
+近期研究探索了语言建模的应用 (**VALL-E X**[^Zhang2023VALL-EX], **VALL-E R**[^Han2024VALL-ER], **MELLE**[^Meng2024MELLE], **ELLA-V**[^Song2024ELLA-V], **VALL-E 2**[^Chen2024VALL-E2], **VoiceCraft**[^Peng2024VoiceCraft], **MobileSpeech**[^Ji2024MobileSpeech], **Spark-TTS**[^Wang2025Spark-TTS], **VALL-E**[^Wang2023VALL-E]), 特别是通过自回归 (AR) 方法.
+一个开创性的工作是 **VALL-E**[^Wang2023VALL-E], 它将语音表示为离散编解码器 Token, 并将这些标记类似于文本处理, 从而将 TTS 任务重新形式化为条件编解码器语言建模任务.
+虽然这样的模型在语音自然度和说话人相似度方面表现出了强大性能, 但它们通常需要在大型数据集上进行训练才能有效.
+此外, 它们的自回归性质导致了推理速度慢且引入了常见的伪影, 例如来自参考音频的非预期重复内容或缺少输入文本中的初始词汇.
 
-<--
+<!--
 To overcome these limitations, non-autoregressive (NAR) approaches have been developed, enabling faster generation through parallel decoding.
 Among these, diffusion-based (**ZET-Speech**[^Kang2023ZET-Speech], **NaturalSpeech2**[^Shen2024NaturalSpeech2], **NaturalSpeech3**[^Ju2024NaturalSpeech3], **DiTTo-TTS**[^Lee2024DiTTo-TTS]) and flow-matching-based (**P-Flow**[^Kim2023P-Flow], **VoiceBox**[^Le2023VoiceBox], **Matcha-TTS**[^Mehta2023Matcha-TTS], **E2-TTS**[^Eskimez2024E2-TTS], **F5-TTS**[^Chen2024F5-TTS]) models have emerged as effective generative frameworks for TTS, striking a better balance between synthesis quality and inference efficiency.
 These models typically operate in the mel-spectrogram domain, which preserves rich acoustic detail and enables in-context learning via target speech prompting, leading to improved speaker similarity.
 To further reduce inference complexity, several works have adopted discrete codec tokens as intermediate representations.
-For example, R-VC [^Zuo2025Rhythm] introduces a shortcut flow matching mechanism that allows generation in a few steps and even one step, significantly reducing inference latency.
-Similarly, OZSpeech [^Hieu2025OZSpeech] achieves single-pass decoding by incorporating a prior as the initial stage and introducing an anchor loss during training to facilitate one-step sampling.
+For example, **R-VC**[^Zuo2025R-VC] introduces a shortcut flow matching mechanism that allows generation in a few steps and even one step, significantly reducing inference latency.
+Similarly, **OZSpeech**[^Huynh2025OZSpeech] achieves single-pass decoding by incorporating a prior as the initial stage and introducing an anchor loss during training to facilitate one-step sampling.
 However, zero-shot TTS is not solely about capturing speaker identity; it also requires accurate modeling of prosodic characteristics from the reference speech.
 A natural solution is to factorize the reference speech into attributes such as prosody, content, and acoustic details, and to model each of these components explicitly.
-While OZSpeech attempts to decompose prompt speech into attribute representations and model them through flow matching, it does so in an implicit manner: treating all attributes equally and relying on the flow matching process to learn the separation implicitly.
+While **OZSpeech** attempts to decompose prompt speech into attribute representations and model them through flow matching, it does so in an implicit manner: treating all attributes equally and relying on the flow matching process to learn the separation implicitly.
 This lack of explicit supervision results in entangled representations, which hinders the model's ability to learn disentangled and controllable factors.
 Consequently, the expressiveness and naturalness of synthesized speech are significantly limited.
 Based on these observations, we pose the following question:
 ***Q1: How can we explicitly model factorized speech tokens in a compact and unified framework?***
 -->
+为了克服这些局限性, 非自回归 (NAR) 方法被开发出来, 通过并行解码实现更快的生成.
+在这类方法中, 基于扩散模型的 (**ZET-Speech**[^Kang2023ZET-Speech], **NaturalSpeech2**[^Shen2024NaturalSpeech2], **NaturalSpeech3**[^Ju2024NaturalSpeech3], **DiTTo-TTS**[^Lee2024DiTTo-TTS]) 和基于流匹配的 (**P-Flow**[^Kim2023P-Flow], **VoiceBox**[^Le2023VoiceBox], **Matcha-TTS**[^Mehta2023Matcha-TTS], **E2-TTS**[^Eskimez2024E2-TTS], **F5-TTS**[^Chen2024F5-TTS]) 模型已经成为 TTS 的有效生成框架, 在语音合成质量和推理效率之间取得了更好的平衡.
+这些模型通常在梅尔频谱域中操作, 保留了丰富的声学细节并通过目标语音参考实现上下文学习, 进而提高了说话人相似度.
 
-<--
-In particular, recent efforts to adapt discrete codec tokens to generative paradigms have sparked a growing interest in applying diffusion models within fully discrete settings [^Ye2025Emotional], [^Ye2025Shushing!].
-In contrast, flow-matching models have predominantly followed a single strategy: embedding discrete data into a continuous space followed by continuous flow matching [^Du2024Cosyvoice2], [^Hieu2025OZS}peech], [^Wang2025Discl-Vc], [^Zuo2025Enhancing].
-Although Discrete Flow Matching (DFM) [^Gat2024Discrete] has emerged as a promising generative paradigm in domains such as language, vision, and bioinformatics [^Shaul2025Flow], [^Yadav2025Retro], [^Fuest2025Maskflow], its application to speech synthesis is still limited.
+为了进一步减少推理复杂度, 数项工作采用离散编解码器 Token 作为中间表示.
+- **R-VC**[^Zuo2025R-VC] 引入了捷径流匹配机制以允许在数步甚至一步内生成, 显著降低了推理延迟.
+- 类似地, **OZSpeech**[^Huynh2025OZSpeech] 通过引入先验作为初始阶段, 并在训练期间引入锚点损失以支持一步采样, 实现单步解码.
+
+但是零样本文本转语音不仅仅需要捕捉说话人身份, 还需要精确建模参考语音中的韵律特征.
+一个自然的解决方案是将参考语音分解为各种属性: 韵律, 内容, 和声学细节, 并显式地建模每个属性.
+尽管 **OZSpeech** 试图将提示语音分解为属性表示并通过流匹配建模, 但它采取的是隐式的方式: 视所有属性等同且依赖于流匹配过程隐式学习分离.
+这种缺乏显式监督的机制导致表示紊乱, 这妨碍了模型学习分离和可控因素的能力.
+因此, 合成语音的表达性和自然性显著受限.
+基于这些观察, 我们提出以下问题:
+***问题 1: 我们如何在紧凑且统一的框架中显式地建模分解的语音 Token?***
+
+<!--
+In particular, recent efforts to adapt discrete codec tokens to generative paradigms have sparked a growing interest in applying diffusion models within fully discrete settings (**DEmoFace**[^Ye2025DEmoFace], **ImaginTalk**[^Ye2025ImaginTalk]).
+In contrast, flow-matching models have predominantly followed a single strategy: embedding discrete data into a continuous space followed by continuous flow matching (**CosyVoice2**[^Du2024CosyVoice2], **OZSpeech**[^Huynh2025OZSpeech], **Discl-VC**[^Wang2025Discl-VC], **PFlow-VC**[^Zuo2025PFlow-VC]).
+Although **Discrete Flow Matching (DFM)**[^Gat2024DFM] has emerged as a promising generative paradigm in domains such as language, vision, and bioinformatics ([^Shaul2025Flow], **RSF**[^Yadav2025RSF], **MaskFlow**[^Fuest2025MaskFlow]), its application to speech synthesis is still limited.
 This motivates a second question:
 ***Q2: Can purely Discrete Flow Matching achieve state-of-the-art zero-shot TTS performance while maintaining both naturalness and fidelity in synthesized speech?***
 -->
+特别地, 最近将离散编解码器 Token 应用于生成范式的努力引起了在完全离散设置下应用扩散模型的增长热潮 (**DEmoFace**[^Ye2025DEmoFace], **ImaginTalk**[^Ye2025ImaginTalk]).
+流匹配模型主要遵循单个策略: 将离散数据嵌入到连续空间中, 然后通过连续流匹配 (**CosyVoice2**[^Du2024CosyVoice2], **OZSpeech**[^Huynh2025OZSpeech], **Discl-VC**[^Wang2025Discl-VC], **PFlow-VC**[^Zuo2025PFlow-VC]) 进行学习.
+
+尽管**离散流匹配 (Discrete Flow Matching, DFM)**[^Gat2024DFM] 在语言, 视觉, 生物信息等领域取得了令人振奋的生成范式, 但其在语音合成中的应用仍有限.
+这促使我们提出第二个问题:
+***问题 2: 纯粹的离散流匹配是否能够在合成语音中实现最先进的零样本 TTS 性能, 同时保持自然度和保真度?***
 
 <--
 In this study, we propose ***Discrete Flow Matching with Factorized Speech Tokens for Zero-Shot Text-To-Speech (DiFlow-TTS)***, as illustrated in [Fig.01](#fig:overview), to directly address the aforementioned challenges and research questions.
 -->
+在本研究中, 我们提出了 ***离散流匹配结合分解语音 Token 的零样本文本转语音 (DiFlow-TTS)*** 模型, 如[图 1](#fig:overview) 所示, 以直接解决上述挑战和研究问题.
 
 > ![](Images/2025.09.11_DiFlow-TTS_Fig.01.png)
 >
@@ -109,10 +137,10 @@ In this study, we propose ***Discrete Flow Matching with Factorized Speech Token
 > 编解码器的解码器负责重构出最终的语音波形.
 > </a>
 
-<--
-To explicitly model factorized speech attributes within a compact and unified framework, we propose the Phoneme-Content Mapper (PCM), which maps phoneme sequences to discrete speech tokens that represent the content of the utterance.
+<!--
+To explicitly model factorized speech attributes within a compact and unified framework, we propose the **Phoneme-Content Mapper (PCM)**, which maps phoneme sequences to discrete speech tokens that represent the content of the utterance.
 This module generates content embeddings that align closely with the semantic structure of the speech.
-These embeddings, along with auditory attributes extracted from the reference speech prompt, are then used to condition a Factorized Discrete Flow Denoiser (FDFD) module, allowing it to effectively clone the reference's speaking style.
+These embeddings, along with auditory attributes extracted from the reference speech prompt, are then used to condition a **Factorized Discrete Flow Denoiser (FDFD)** module, allowing it to effectively clone the reference's speaking style.
 Crucially, we design the model with separate prediction heads for the probability velocity of distinct speech aspects, specifically prosody, and acoustic details, allowing it to learn aspect-specific distributions explicitly.
 As a result, the model achieves improved naturalness, expressiveness, and fidelity in the synthesized speech.
 Our main contributions are as follows:
@@ -123,27 +151,40 @@ This architecture enables the model to explicitly learn aspect-specific distribu
 - Experimental results demonstrate that ***DiFlow-TTS*** is both compact and efficient in model size, surpassing several strong zero-shot TTS baselines in terms of naturalness, prosody, energy control, and speaker style preservation.
 It also maintains a compact model size and achieves low-latency inference, generating speech up to 25.8 times faster than strong baselines.
 -->
+为了在紧凑且统一的框架下显式建模分解后的语音属性, 我们提出了 **音素-内容映射器 (Phoneme-Content Mapper, PCM)**, 它将音素序列映射到离散语音 Token, 代表着发言内容.
+这一模块生成内容嵌入, 和语音的语义结构近似对齐.
+这些嵌入, 以及从参考语音提示中提取出的听觉属性, 之后被用于条件化 **分解离散流去噪器 (Factorized Discrete Flow Denoiser, FDFD)**, 使其能够有效克隆参考的说话风格.
+至关重要的是, 我们设计模型时, 对不同的语音方面 (具体是韵律和声学细节) 的概率速度采用了单独的预测头, 使其能够显式学习具体方面的分布.
+因此, 模型的合成语音的自然度, 表现力和真实度都得到了改善.
+
+我们的主要贡献如下:
+- 提出了新式离散流匹配模型, 据我们所知是首个探索纯离散流匹配进行语音合成的模型.
+  我们的方法通过以 PCM 导出的目标文本内容表示, 参考语音提示的听觉属性为条件进行上下文学习, 以完全非自回归的方式实现零样本设置下的有效属性克隆和高质量语音生成.
+- 我们引入了分解流预测机制, DFM 通过不同预测头联合建模多个语音方面, 包括韵律和细粒度声学细节.
+  这一架构使得模型在统一框架下显式学习特定方面的分布.
+- 实验结果表明 ***DiFlow-TTS*** 在模型尺寸方面紧凑且高效, 在自然度, 韵律, 能量控制和说话人风格保持等方面超越了数种强力的零样本 TTS 基线模型.
+  它还保持了紧凑的模型尺寸, 并实现了低延迟推理, 能以 25.8 倍于基线的速度生成语音.
 
 ## 2·背景
 
 <--
-A growing trend in speech synthesis focuses on converting raw waveforms into discrete token representations using **vector-quantized variational autoencoders (VQ-VAE)**, which was first introduced by **VQ-VAE**[^Oord2017Neural] in the field of computer vision and later adapted to speech synthesis.
+A growing trend in speech synthesis focuses on converting raw waveforms into discrete token representations using **vector-quantized variational autoencoders (VQ-VAE)**, which was first introduced by **VQ-VAE**[^Oord2017VQ-VAE] in the field of computer vision and later adapted to speech synthesis.
 These tokenized representations have demonstrated greater naturalness and robustness compared to conventional mel-spectrogram-based approaches.
-To effectively model sequences of discrete speech tokens, recent efforts have adapted large language models (LLMs) from the natural language processing (NLP) domain (**VALL-E X**[^Zhang2023VALL-EX], **VALL-E 2**[^Chen2024VALL-E2], **VALL-E R**[^Han2024VALL-ER], **CosyVoice2**[^Du2024Cosyvoice2], **VoiceCraft**[^Peng2024VoiceCraft], **MELLE**[^Meng2024MELLE], **VALL-E**[^Wang2023VALL-E], **Spark-TTS**[^Wang2025Spark-TTS]).
+To effectively model sequences of discrete speech tokens, recent efforts have adapted large language models (LLMs) from the natural language processing (NLP) domain (**VALL-E X**[^Zhang2023VALL-EX], **VALL-E 2**[^Chen2024VALL-E2], **VALL-E R**[^Han2024VALL-ER], **CosyVoice2**[^Du2024CosyVoice2], **VoiceCraft**[^Peng2024VoiceCraft], **MELLE**[^Meng2024MELLE], **VALL-E**[^Wang2023VALL-E], **Spark-TTS**[^Wang2025Spark-TTS]).
 A notable example is **VALL-E**[^Wang2023VALL-E], which leverages a pre-trained neural codec to encode speech into discrete codec tokens and reformulates zero-shot TTS as a conditional codec language modeling task.
 During inference, it performs autoregressive (AR) continuation from the acoustic tokens of a short speech prompt, enabling high-fidelity speaker-consistent voice synthesis.
 -->
 
 <--
 Although autoregressive models achieve impressive quality, they are inherently limited by slow inference speeds.
-This limitation has prompted a shift toward non-autoregressive (NAR) paradigms (**NaturalSpeech2**[^Shen2024NaturalSpeech2], **NaturalSpeech3**[^Ju2024NaturalSpeech3], [^Du2024UniCATS], **DiTTo-TTS**[^Lee2024DiTTo-TTS], [^Jia2025DiTAR]).
-For example, NaturalSpeech 2 [^Shen2024NaturalSpeech2] uses diffusion [^Ho2020Denoising], [^Song2021Score-Based] to generate discrete acoustic tokens as continuous features, and **NaturalSpeech3**[^Ju2024NaturalSpeech3] further factorizes speech into subspaces of content, prosody, and acoustic details, employing multiple diffusion models to independently capture various acoustic characteristics.
-In parallel, flow matching [^Lipman2023Flow], [^Liu2023Flow] has gained attention as a promising generative technique, producing strong results in various domains.
-However, most existing speech-related flow matching applications operate in a continuous space (**Matcha-TTS**[^Mehta2023Matcha-TTS], [^Guan2024Reflow-TTS], [^Yao2025Stablevc], [^Zuo2025Rhythm], [^Zuo2025Enhancing], [^Hieu2025OZSpeech]), requiring either a pure mel-spectrogram or discrete tokens to be embedded into continuous representations prior to generation.
+This limitation has prompted a shift toward non-autoregressive (NAR) paradigms (**NaturalSpeech2**[^Shen2024NaturalSpeech2], **NaturalSpeech3**[^Ju2024NaturalSpeech3], **UniCATS**[^Du2024UniCATS], **DiTTo-TTS**[^Lee2024DiTTo-TTS], **DiTAR**[^Jia2025DiTAR]).
+For example, **NaturalSpeech2**[^Shen2024NaturalSpeech2] uses diffusion ([^Ho2020Denoising], [^Song2021Score-Based]) to generate discrete acoustic tokens as continuous features, and **NaturalSpeech3**[^Ju2024NaturalSpeech3] further factorizes speech into subspaces of content, prosody, and acoustic details, employing multiple diffusion models to independently capture various acoustic characteristics.
+In parallel, flow matching (**FM**[^Lipman2022FM], **RectifiedFlow**[^Liu2022RectifiedFlow]) has gained attention as a promising generative technique, producing strong results in various domains.
+However, most existing speech-related flow matching applications operate in a continuous space (**Matcha-TTS**[^Mehta2023Matcha-TTS], **ReFlow-TTS**[^Guan2024Reflow-TTS], [^Yao2025Stablevc], **R-VC**[^Zuo2025R-VC], [^Zuo2025PFlow-VC], **OZSpeech**[^Huynh2025OZSpeech]), requiring either a pure mel-spectrogram or discrete tokens to be embedded into continuous representations prior to generation.
 This leads to increased computational overhead and latency during inference, which diminishes the efficiency benefits of flow-based approaches.
 An emerging line of research seeks to extend iterative refinement techniques to discrete spaces by modeling generation dynamics using Markov chains.
-Discrete-space generative models have already proven effective in domains such as natural language [^Lou2024Discrete], [^Shi2024Simplified], [^Sahoo2024Simple], proteins [^Campbell2024Generative], [^Yi2025All-Atom], vision [^Austin2021Structured], [^Chang2022MaskGIT], [^Shi2024Simplified], [^Fuest2025Maskflow], code [^Gat2024Discrete], and even graphs [^Qin2025DeFoG].
-Although discrete diffusion models have recently been applied to speech synthesis [^Ye2025Emotional], [^Ye2025Shushing!], the use of discrete flow matching [^Gat2024Discrete] to model speech tokens remains largely unexplored, particularly in zero-shot TTS scenarios.
+Discrete-space generative models have already proven effective in domains such as natural language ([^Lou2024Discrete], [^Shi2024Simplified], [^Sahoo2024Simple]), proteins ([^Campbell2024Generative], [^Yi2025All-Atom]), vision ([^Austin2021Structured], [^Chang2022MaskGIT], [^Shi2024Simplified], [^Fuest2025MaskFlow]), code ([^Gat2024DFM]), and even graphs ([^Qin2025DeFoG]).
+Although discrete diffusion models have recently been applied to speech synthesis (**DEmoFace**[^Ye2025DEmoFace], **ImaginTalk**[^Ye2025ImaginTalk]), the use of **discrete flow matching**[^Gat2024DFM] to model speech tokens remains largely unexplored, particularly in zero-shot TTS scenarios.
 In this work, we propose a DFM framework tailored for zero-shot TTS, aiming to harness the efficiency of discrete modeling without compromising quality.
 -->
 
@@ -182,8 +223,8 @@ We elaborate on the source and target distributions as well as the probability v
 
 <--
 **Source Distribution**:
-Following [^Gat2024Discrete], we instantiate the source distribution $p$ to assign all probability mass to sequences in which every token is the mask token \verb|[MASK]|, that is, $p(x) = \delta_{\verb|[MASK]|}(x)$.
-This implies that the source distribution places all probability mass in the sequence where every token is the mask token \verb|[MASK]|.
+Following **Discrete Flow Matching (DFM)**[^Gat2024DFM], we instantiate the source distribution $p$ to assign all probability mass to sequences in which every token is the mask token $\verb|[MASK]|$, that is, $p(x) = \delta_{\verb|[MASK]|}(x)$.
+This implies that the source distribution places all probability mass in the sequence where every token is the mask token $\verb|[MASK]|$.
 -->
 
 <--
@@ -205,7 +246,7 @@ Assuming the independence between the two components, the joint target distribut
 <--
 **Probability Velocity**:
 We define a scheduler $\kappa_t \in [0,1]$, which is a monotonically increasing function with boundary conditions $\kappa_0 = 0$ and $\kappa_1 = 1$, where $t \in [0, 1]$ denotes the continuous time variable.
-Following [^Gat2024Discrete], we consider a conditional probability path known as the *mixture path*, which linearly interpolates between the source and target distributions:
+Following **DFM**[^Gat2024DFM], we consider a conditional probability path known as the *mixture path*, which linearly interpolates between the source and target distributions:
 $p_t(\mathbf{x}^i | \mathbf{x}_0, \mathbf{x}_1) = (1 - \kappa_t)\delta_{\mathbf{x}_0}(\mathbf{x}^i) + \kappa_t\delta_{\mathbf{x}_1}(\mathbf{x}^i)$, where $p_t(\mathbf{x}|\mathbf{x}_0,\mathbf{x}_1) = \prod_{i=1}^N p_t(\mathbf{x}^i | \mathbf{x}_0,\mathbf{x}_1)$.
 This defines a time-dependent probability on the space of tokens $[v]$ conditioned on the pair $\mathbf{x}_0, \mathbf{x}_1$, where the probability mass gradually shifts from the source token to the target token as $\kappa_t$ increases.
 This *conditional probability path* is governed by the probability velocity $\mathbf{u}_t$, defined as:
@@ -360,7 +401,7 @@ $$
 #### 分解流预测
 
 <--
-Inspired by the Multi-head Attention mechanism [^Vaswani2017Transformer], which enables the model to jointly attend to information from different representation subspaces, we propose a factorized flow prediction mechanism based on multi-head prediction.
+Inspired by the Multi-head Attention mechanism (**Transformer**[^Vaswani2017Transformer]), which enables the model to jointly attend to information from different representation subspaces, we propose a factorized flow prediction mechanism based on multi-head prediction.
 In this design, FDFD simultaneously models multiple aspects of speech, specifically prosody and acoustic details.
 Formally, we define two parallel heads: the *prosody head* $f_{\phi}(\cdot)$ and the *acoustic head* $f_{\omega}(\cdot)$, which independently predict probability distributions corresponding to prosody and acoustic attributes.
 We begin by slicing the representation $\mathbf{h}_{p,a}$ obtained from Eq~\eqref{eq:h_pa} into two parts: the prosody representation $\mathbf{h}_p \in \mathbb{R}^{m \times L \times D}$ and the acoustic representation $\mathbf{h}_a \in \mathbb{R}^{k \times L \times D}$.
@@ -410,8 +451,8 @@ where $\lambda_{dur}$, $\lambda_c$, and $\lambda_{FDFD}$ are hyperparameters tha
 ### 数据集
 
 <--
-We use the *LibriTTS* dataset [^Zen2019LibriTTS], which contains multi-speaker English audio recordings, for training purposes.
-For evaluation, we utilize the *LibriSpeech test-clean* dataset [^Panayotov2015Librispeech].
+We use the **LibriTTS** dataset[^Zen2019LibriTTS], which contains multi-speaker English audio recordings, for training purposes.
+For evaluation, we utilize the **LibriSpeech test-clean** dataset[^Panayotov2015Librispeech].
 Additional details are provided in the *Dataset Details* section of the Supplementary Material.
 -->
 
@@ -432,7 +473,7 @@ Please refer to the *Implementation Details* section of the Supplementary Materi
 Additionally, we compare our model with previous zero-shot TTS baselines, with further information provided in the *Baselines Details* section of the Supplementary Material.
 -->
 
-## 4.结果
+## 5·结果
 
 ### 对比结果
 
@@ -498,7 +539,7 @@ At this setting, ***DiFlow-TTS*** delivers sufficiently strong performance in sp
 These results demonstrate its effective trade-off between quality and efficiency.
 -->
 
-## 5·结论
+## 6·结论
 
 <!--
 In this work, we introduced ***DiFlow-TTS***, a novel zero-shot text-to-speech system that leverages purely discrete flow matching with factorized speech token modeling.
@@ -533,24 +574,24 @@ Future work includes enabling multilingual and emotional synthesis and integrati
 [^Mehta2023Matcha-TTS]: [**Matcha-TTS**: A Fast TTS Architecture with Conditional Flow Matching](2023.09.06_Matcha-TTS.md). ArXiv:2309.03199v2/ICASSP2024.
 [^Eskimez2024E2-TTS]: [**E2 TTS**: Embarrassingly Easy Fully Non-Autoregressive Zero-Shot TTS](2024.06.26_E2_TTS.md). ArXiv:2406.18009v2/SLT2024.
 [^Chen2024F5-TTS]: [**F5-TTS**: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching](2024.10.09_F5-TTS.md). ArXiv:2410.06885v3.
-[^Zuo2025Rhythm]: Rhythm Controllable and Efficient Zero-Shot Voice Conversion via Shortcut Flow Matching. Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) 2025.
-[^Hieu2025OZSpeech]: OZSpeech: One-Step Zero-Shot Speech Synthesis With Learned-Prior-Conditioned Flow Matching. Proceedings of the 63rd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers) 2025.
-[^Ye2025Emotional]: Emotional Face-to-Speech. Forty-Second International Conference on Machine Learning 2025.
-[^Ye2025Shushing!]: Shushing! Let's Imagine an Authentic Speech From the Silent Video. arXiv:2503.14928.
-[^Du2024Cosyvoice2]: Cosyvoice 2: Scalable Streaming Speech Synthesis With Large Language Models. arXiv:2412.10117.
-[^Wang2025Discl-Vc]: Discl-Vc: Disentangled Discrete Tokens and in-Context Learning for Controllable Zero-Shot Voice Conversion. arXiv:2505.24291.
-[^Zuo2025Enhancing]: Enhancing Expressive Voice Conversion With Discrete Pitch-Conditioned Flow Matching Model. ICASSP 2025-2025 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2025.
-[^Gat2024Discrete]: Discrete Flow Matching. Advances in Neural Information Processing Systems 2024.
+[^Zuo2025R-VC]: [**R-VC**: Rhythm Controllable and Efficient Zero-Shot Voice Conversion via Shortcut Flow Matching](../-VC/2025.06.01_R-VC.md). ArXiv:2506.01014v1/ACL2025.
+[^Huynh2025OZSpeech]: [**OZSpeech**: One-Step Zero-Shot Speech Synthesis with Learned-Prior-Conditioned Flow Matching](2025.05.19_OZSpeech.md). ArXiv:2505.12800v1/ACL2025.
+[^Ye2025DEmoFace]: [**DEmoFace**: Emotional Face-to-Speech](../_Basis/2025.02.03_DEmoFace.md). ArXiv:2502.01046v1.
+[^Ye2025ImaginTalk]: [**ImaginTalk**: Shushing! Let's Imagine an Authentic Speech from the Silent Video](../_Basis/2025.03.19_ImaginTalk.md). ArXiv:2503.14928v1.
+[^Du2024CosyVoice2]: [**CosyVoice2**: Scalable Streaming Speech Synthesis with Large Language Models](../SpeechLM_TTS/2024.12.13_CosyVoice2.md). ArXiv:2412.10117v3.
+[^Wang2025Discl-VC]: [**Discl-VC**: Disentangled Discrete Tokens and In-Context Learning for Controllable Zero-Shot Voice Conversion](../-VC/2025.05.30_Discl-VC.md). ArXiv:2505.24291v1.
+[^Zuo2025PFlow-VC]: [**PFlow-VC**: Enhancing Expressive Voice Conversion with Discrete Pitch-Conditioned Flow Matching Model](../-VC/2025.02.08_PFlow-VC.md). ArXiv:2502.05471v1/ICASSP2025.
+[^Gat2024DFM]: [**DFM**: Discrete Flow Matching](_2024.07.22_Discrete_Flow_Matching.md). ArXiv:2407.15595v2.
 [^Shaul2025Flow]: Flow Matching With General Discrete Paths: A Kinetic-Optimal Perspective. The Thirteenth International Conference on Learning Representations 2025.
-[^Yadav2025Retro]: RETRO SYNFLOW: Discrete Flow Matching for Accurate and Diverse Single-Step Retrosynthesis. arXiv:2506.04439.
-[^Fuest2025Maskflow]: Maskflow: Discrete Flows for Flexible and Efficient Long Video Generation. arXiv:2502.11234.
-[^Oord2017Neural]: Neural Discrete Representation Learning. Proceedings of the 31st International Conference on Neural Information Processing Systems 2017.
+[^Yadav2025RSF]: [**RETRO SYNFLOW/RSF**: Discrete Flow Matching for Accurate and Diverse Single-Step Retrosynthesis](../_Basis/2025.06.04_RSF.md). ArXiv:2506.04439v1.
+[^Fuest2025MaskFlow]: [**MaskFlow**: Discrete Flows for Flexible and Efficient Long Video Generation](../_Basis/2025.02.16_MaskFlow.md). ArXiv:2502.11234v2.
+[^Oord2017VQ-VAE]: [**VQ-VAE**: Neural Discrete Representation Learning](../../Modules/VQ/2017.11.02_VQ-VAE.md). ArXiv:1711.00937v2/NeurIPS2017.
 [^Du2024UniCATS]: UniCATS: A Unified Context-Aware Text-to-Speech Framework With Contextual VQ-Diffusion and Vocoding. Proceedings of the AAAI Conference on Artificial Intelligence 2024.
 [^Jia2025DiTAR]: DiTAR: Diffusion Transformer Autoregressive Modeling for Speech Generation. Forty-Second International Conference on Machine Learning 2025.
 [^Ho2020Denoising]: Denoising Diffusion Probabilistic Models. Advances in Neural Information Processing Systems 2020.
 [^Song2021Score-Based]: Score-Based Generative Modeling Through Stochastic Differential Equations. International Conference on Learning Representations 2021.
-[^Lipman2023Flow]: Flow Matching for Generative Modeling. The Eleventh International Conference on Learning Representations 2023.
-[^Liu2023Flow]: Flow Straight and Fast: Learning to Generate and Transfer Data With Rectified Flow. The Eleventh International Conference on Learning Representations 2023.
+[^Lipman2022FM]: [**FM**: Flow Matching for Generative Modeling](_2022.10.06_Flow_Matching.md). ArXiv:2210.02747v2.
+[^Liu2022RectifiedFlow]: [**RectifiedFlow**: Flow Straight and Fast: Learning to Generate and Transfer Data with Rectified Flow](_2022.09.07_RectifiedFlow.md). ArXiv:2209.03003v1.
 [^Guan2024Reflow-Tts]: Reflow-Tts: A Rectified Flow Model for High-Fidelity Text-to-Speech. ICASSP 2024-2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
 [^Yao2025Stablevc]: Stablevc: Style Controllable Zero-Shot Voice Conversion With Conditional Flow Matching. Proceedings of the AAAI Conference on Artificial Intelligence 2025.
 [^Lou2024Discrete]: Discrete Diffusion Modeling by Estimating the Ratios of the Data Distribution. Proceedings of the 41st International Conference on Machine Learning 2024.
