--- a/Models/-VC/2025.09.21_MaskVCT.md
+++ b/Models/-VC/2025.09.21_MaskVCT.md
@@ -22,3 +22,12 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+We introduce MaskVCT, a zero‑shot voice conversion (VC) model that offers multi‑factor controllability through multiple classifier‑free guidances (CFGs).
+While previous VC models rely on a fixed conditioning scheme, MaskVCT integrates diverse conditions in a single model.
+To further enhance robustness and control, the model can leverage continuous or quantized linguistic features to enhance intelligibility and speaker similarity, and can use or omit pitch contour to control prosody.
+These choices allow users to seamlessly balance speaker identity, linguistic content, and prosodic factors in a zero‑shot VC setting.
+Extensive experiments demonstrate that MaskVCT achieves the best target speaker and accent similarities while obtaining competitive word and character error rates compared to existing baselines.
+Audio samples are available at \url{https://maskvct.github.io/}.
